# issun-db

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  ROADMAP.md  SECURITY.md  clippy.toml  codecov.yml  deny.toml  flake.nix  mkdocs.yml  pyproject.toml  run_issundb_benchmark.py
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: docs.yml  ghcr.yml  lints.yml  publish.yml  publish_py.yml  release.yml  tests.yml
benchmarks/ladybug-compare/: Cargo.toml  README.md  rust-toolchain.toml
benchmarks/ladybug-compare/src/: main.rs
benchmarks/ladybug-compare/tests/: lbug_trail_semantics.rs
benchmarks/ladybugdb-compare/: Cargo.toml  README.md  rust-toolchain.toml
benchmarks/ladybugdb-compare/src/: main.rs
crates/issundb/: Cargo.toml  README.md
crates/issundb-cli/: Cargo.toml
crates/issundb-cli/src/: main.rs
crates/issundb-core/: AGENTS.md  Cargo.toml  README.md  build.rs
crates/issundb-core/benches/: pokec.rs  storage.rs  wiki_pagerank.rs  write_throughput.rs
crates/issundb-core/proptest-regressions/: lib.txt
crates/issundb-core/src/: columns.rs  csr.rs  error.rs  graph.rs  histogram.rs  lib.rs  matrices.rs  metrics.rs  schema.rs  vector.rs
crates/issundb-core/src/graph/: algo.rs  edge.rs  fts_mod.rs  index.rs  mod.rs  node.rs  stats.rs  txn.rs  vector.rs
crates/issundb-core/src/graph/graphblas/: analytics.rs  flow.rs  mod.rs  paths.rs  traversal.rs
crates/issundb-core/src/storage/: fts.rs  ids.rs  lmdb.rs  mod.rs  props.rs
crates/issundb-cypher/: AGENTS.md  Cargo.toml  README.md
crates/issundb-cypher/benches/: execute.rs  lsqb.rs  oltp_transaction.rs  parse.rs
crates/issundb-cypher/proptest-regressions/exec/: vectorized.txt
crates/issundb-cypher/src/: ast.rs  builtin_procs.rs  error.rs  exec.rs  lib.rs  parser.rs  procedure.rs
crates/issundb-cypher/src/exec/: copy.rs  ddl.rs  expr.rs  factorize.rs  mod.rs  read.rs  row.rs  vectorized.rs  write.rs
crates/issundb-cypher/src/plan/: logical.rs  mod.rs  optimize.rs  physical.rs  stats.rs
crates/issundb-examples/: Cargo.toml  README.md  concurrent_ops.rs  gds_cypher.rs  gen_testdata.rs  graph_analytics.rs  hybrid_retrieval_quickstart.rs  load_ldbc.rs  neo4j_migration.rs  profile_query.rs  quickstart.rs
crates/issundb-graphblas/: Cargo.toml  README.md
crates/issundb-graphblas-sys/: Cargo.toml  README.md  bindings.rs  build.rs
crates/issundb-graphblas-sys/src/: lib.rs
crates/issundb-graphblas/src/: lib.rs
crates/issundb-gui/: Cargo.toml
crates/issundb-gui/src/: main.rs
crates/issundb-mcp/: Cargo.toml
crates/issundb-mcp/src/: main.rs  server.rs
crates/issundb-node/: Cargo.toml  README.md  index.js  package.json
crates/issundb-node/src/: bindings.rs  lib.rs
crates/issundb-node/test/: smoke.test.js
crates/issundb-py/: Cargo.toml  README.md  issundb.pyi  pyproject.toml
crates/issundb-py/examples/: quickstart.py  search.py
crates/issundb-py/python/issundb/: __init__.py  issundb.pyi
crates/issundb-py/src/: bindings.rs  lib.rs
crates/issundb-py/tests/: conftest.py  test_backup.py  test_edges.py  test_indexes.py  test_nodes.py  test_query.py  test_retrieve.py  test_search.py  test_smoke.py
crates/issundb-rag/: Cargo.toml
crates/issundb-rag/src/: lib.rs  retrieve.rs
crates/issundb-rest/: Cargo.toml
crates/issundb-rest/src/: main.rs  routes.rs
crates/issundb-rest/tests/: routes.rs
crates/issundb-retrieval/: Cargo.toml  README.md
crates/issundb-retrieval/benches/: graphrag_retrieval.rs  hybrid_retrieval.rs  se_hybrid_retrieval.rs
crates/issundb-retrieval/src/: error.rs  lib.rs  retrieve.rs
crates/issundb-server/: Cargo.toml
crates/issundb-server/src/: main.rs  routes.rs
crates/issundb-testing/: Cargo.toml
crates/issundb-testing/src/: lib.rs
crates/issundb-text/: AGENTS.md  Cargo.toml  README.md
crates/issundb-text/benches/: fts_search.rs  se_fts_search.rs
crates/issundb-text/src/: lib.rs
crates/issundb-vector/: AGENTS.md  Cargo.toml  README.md
crates/issundb-vector/benches/: se_dataset.rs  se_vector_search.rs  vector_search.rs
crates/issundb-vector/src/: error.rs  index.rs  lib.rs
crates/issundb/benches/: profile_triangle.rs  query_optimizer.rs  skewed_schema.rs
crates/issundb/examples/: hybrid_retrieval_quickstart.rs  neo4j_migration.rs
crates/issundb/src/: lib.rs
crates/issundb/tests/: conformance.rs  graph_api.rs  modern_graph.rs  oracle.rs
crates/issundb/tests/conformance/features/: MATCH.feature  MUTATE.feature  WITH_UNWIND.feature
crates/issundb/tests/fixtures/: networkx_centrality.json  networkx_oracle.json  networkx_pagerank.json  networkx_paths.json
docs/: README.md  api-reference.md  architecture.md  examples.md  full-text-search.md  getting-started.md  hybrid-retrieval.md  index.md  integrations.md  limitations.md  python.md  query-execution.md  query-optimizer.md  storage-format.md  vector-search.md
docs/assets/diagrams/: architecture.dot  make_figures.sh
docs/design/: execution-engine.md
scripts/: check_graphblas_pin.sh  download_search_datasets.sh  gen_centrality_fixtures.py  gen_oracle_fixtures.py  gen_pagerank_fixtures.py  gen_paths_fixtures.py  test_cli.sh
test_data/: README.md
test_data/v0.1.0-alpha.1/: README.md
tests/testdata/: README.md
tools/: gen_centrality_fixtures.py  gen_oracle_fixtures.py  gen_pagerank_fixtures.py  gen_paths_fixtures.py
