[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Hassan Abedi <hassan.abedi.t@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/IssunDB/issun-db"
homepage = "https://github.com/IssunDB/issun-db"
rust-version = "1.85"

# ---------------------------------------------------------------------------
# Shared dependencies — pin versions once, inherit everywhere
# ---------------------------------------------------------------------------
[workspace.dependencies]
# Storage
heed = "0.20"
byteorder = "1"

# Zero-copy fixed-size types (AdjEntry)
zerocopy = { version = "0.7", features = ["derive"] }

# Serialization (msgpack for property bags)
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }

# Concurrency
parking_lot = "0.12"
arc-swap = "1"
crossbeam = "0.8"

# Errors / logging
thiserror = "1"
anyhow = "1"
tracing = "0.1"

# Fast hash maps (CSR id→dense maps)
ahash = "0.8"

# Testing
tempfile = "3"
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

# ---------------------------------------------------------------------------
# Heavy compute / vector deps — added in later phases
graphblas_sparse_linear_algebra = "0.63.0" # phase 3: CSR + GraphBLAS
usearch = "2"                              # phase 5: vector search
chumsky = "0.10.0"                         # phase 7: Cypher parser
# ---------------------------------------------------------------------------

[profile.release]
strip = "debuginfo"
panic = "unwind"
codegen-units = 1
lto = true

[profile.bench]
debug = true

[profile.test]
debug = true
