[workspace]
members = ["crates/*"]
resolver = "2"

# The LadybugDB comparison harness links a C++ library and stays outside the
# workspace so `make build` and `make test` never compile it.
exclude = ["benchmarks/ladybug-compare"]


[workspace.package]
version = "0.1.0-alpha.1"
edition = "2024"
authors = ["Hassan Abedi <hassan.abedi.t+issundb@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/IssunDB/issun-db"
homepage = "https://github.com/IssunDB/issun-db"
rust-version = "1.85.0"


[workspace.dependencies]
heed = "0.22"
byteorder = "1"
zerocopy = { version = "0.8.48", features = ["derive"] }
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
arc-swap = "1"
crossbeam = "0.8"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
ahash = "0.8"
tempfile = "3"
proptest = "1"
rand = "0.8"
criterion = { version = "0.5.1", features = ["html_reports"] }
graphblas_sparse_linear_algebra = "0.63.0"
suitesparse_graphblas_sys = "0.4.3"
usearch = "2"
chumsky = { version = "0.13.0", features = ["pratt"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
rust-stemmers = "1.2.0"
unicode-segmentation = "1.13.2"
pyo3 = { version = "0.25", features = ["abi3-py38"] }
walkdir = "2"
gherkin = "0.14"
roaring = "0.10"
deepsize = { version = "0.2", features = ["derive"] }

[profile.release]
strip = "debuginfo"
panic = "unwind"
codegen-units = 1
lto = true

[profile.bench]
debug = true

[profile.test]
debug = true
