[package]
name = "issundb-cli"
description = "IssunDB's command-line interface (CLI)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "issundb"
path = "src/main.rs"
doc = false

[dependencies]
issundb = { path = "../issundb" }
rmp-serde.workspace = true
serde.workspace = true
serde_json = "1"
rustyline = "14"

[dev-dependencies]
tempfile.workspace = true
