[package]
name = "issundb-cli"
description = "IssunDB's command-line interface (CLI)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "issundb-cli"
path = "src/main.rs"
doc = false

[dependencies]
issundb.workspace = true
colored.workspace = true
rmp-serde.workspace = true
serde_json = "1"
rustyline = "=15"
clap = { version = "4", features = ["derive", "env"] }

[dev-dependencies]
tempfile.workspace = true
