[package]
name = "issundb-core"
description = "IssunDB storage engine: schema, LMDB persistence, CSR cache, graph CRUD"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
heed.workspace = true
byteorder.workspace = true
zerocopy.workspace = true
rmp-serde.workspace = true
serde.workspace = true
parking_lot.workspace = true
arc-swap.workspace = true
thiserror.workspace = true
tracing.workspace = true
ahash.workspace = true
usearch.workspace = true
graphblas_sparse_linear_algebra = { workspace = true, optional = true }

[features]
default = []
graphblas = ["dep:graphblas_sparse_linear_algebra"]

[dev-dependencies]
tempfile.workspace = true
serde_json = "1"
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "storage"
harness = false
