[package]
name = "issundb-core"
description = "IssunDB's storage engine and core data structures"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
heed.workspace = true
byteorder.workspace = true
zerocopy.workspace = true
rmp-serde.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
arc-swap.workspace = true
thiserror.workspace = true
tracing.workspace = true
ahash.workspace = true
issundb-graphblas = { workspace = true }
rust-stemmers.workspace = true
unicode-segmentation.workspace = true
deepsize.workspace = true

[features]
default = []

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
criterion.workspace = true
rand.workspace = true
serde_json.workspace = true

[[bench]]
name = "storage"
harness = false

[[bench]]
name = "pokec"
harness = false

[[bench]]
name = "wiki_pagerank"
harness = false

[[bench]]
name = "write_throughput"
harness = false

[[bin]]
name = "gen_testdata"
path = "src/bin/gen_testdata.rs"
