[package]
name = "issundb-cypher"
description = "Cypher query language support for IssunDB"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
issundb-core = { path = "../issundb-core" }
tracing.workspace = true
thiserror.workspace = true
chumsky = { workspace = true, features = ["pratt"] }
serde.workspace = true
serde_json = "1"
rmp-serde.workspace = true
regex = "1"

[dev-dependencies]
tempfile.workspace = true
criterion.workspace = true

[[bench]]
name = "parse"
harness = false
