[package]
name = "issundb-cypher"
description = "Cypher query language support for IssunDB"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
issundb-core.workspace = true
issundb-text.workspace = true
ahash.workspace = true
tracing.workspace = true
thiserror.workspace = true
chumsky = { workspace = true, features = ["pratt"] }
serde.workspace = true
serde_json = "1"
rmp-serde.workspace = true
regex = "1"
chrono.workspace = true
chrono-tz.workspace = true
parquet = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }


[dev-dependencies]
tempfile.workspace = true
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "execute"
harness = false

[[bench]]
name = "lsqb"
harness = false

[[bench]]
name = "oltp_transaction"
harness = false
