[package]
name = "issundb-examples"
description = "A collection of examples for IssunDB"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
issundb = { path = "../issundb" }
serde_json.workspace = true
tempfile.workspace = true
rmp-serde.workspace = true

[[example]]
name = "quickstart"
path = "quickstart.rs"

[[example]]
name = "hybrid_retrieval_quickstart"
path = "hybrid_retrieval_quickstart.rs"

[[example]]
name = "load_ldbc"
path = "load_ldbc.rs"

[[example]]
name = "neo4j_migration"
path = "neo4j_migration.rs"

[[bin]]
name = "gen_testdata"
path = "gen_testdata.rs"
