[package]
name = "issundb-graphblas-sys"
description = "Raw FFI bindings to SuiteSparse:GraphBLAS"
readme = "README.md"
links = "graphblas"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[lib]
name = "issundb_graphblas_sys"

[build-dependencies]
bindgen = "0.72"
cmake = "0.1"
sha2 = "0.10"
