[package]
name = "issundb-mcp"
description = "Model Context Protocol server for IssunDB"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "issundb-mcp"
path = "src/main.rs"
doc = false

[dependencies]
issundb = { path = "../issundb" }
rmcp = { version = "=0.11", features = [
    "server",
    "macros",
    "transport-io",
    "transport-streamable-http-server",
] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
rmp-serde = "1"
anyhow = "1"
