[package]
name = "issundb-node"
description = "Node.js bindings for IssunDB"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
napi-module = ["dep:napi", "dep:napi-derive"]

[dependencies]
napi = { version = "2", features = ["napi4"], optional = true }
napi-derive = { version = "2", optional = true }
issundb = { path = "../issundb" }
serde_json = { workspace = true }
rmp-serde = { workspace = true }

[build-dependencies]
napi-build = "=2.1.4"
