[package]
name = "issundb-py"
description = "Python bindings for IssunDB"
version = "0.1.0-alpha.1"
edition = "2021"
publish = false

[lib]
name = "issundb"
crate-type = ["cdylib", "rlib"]

[features]
default = []
extension-module = ["dep:pyo3", "pyo3/extension-module"]

[dependencies]
pyo3 = { workspace = true, optional = true }
issundb = { path = "../issundb" }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
