[package]
name = "issundb-py"
description = "Python bindings for IssunDB"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "issundb"
crate-type = ["cdylib", "rlib"]
doc = false

[features]
default = []
extension-module = ["dep:pyo3", "pyo3/extension-module", "pyo3/generate-import-lib"]

[dependencies]
pyo3 = { workspace = true, optional = true }
issundb.workspace = true
serde_json = { workspace = true }
rmp-serde = { workspace = true }
