[package]
name = "issundb-rag"
description = "GraphRAG primitives: vector hit → k-hop expansion → subgraph"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
issundb-core = { path = "../issundb-core" }
thiserror.workspace = true
ahash.workspace = true
graphblas_sparse_linear_algebra = { workspace = true, optional = true }

[features]
default = []
graphblas = ["dep:graphblas_sparse_linear_algebra", "issundb-core/graphblas"]

[dev-dependencies]
tempfile.workspace = true
serde_json = "1"
