[package]
name = "issundb-rag"
description = "Compatibility crate for IssunDB hybrid retrieval APIs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
issundb-retrieval = { path = "../issundb-retrieval" }

[features]
default = []
graphblas = ["issundb-retrieval/graphblas"]
