[package]
name = "issundb-rest"
description = "An HTTP REST API server for IssunDB"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "issundb-rest"
path = "src/main.rs"
doc = false

[dependencies]
issundb.workspace = true
axum = "0.8.9"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
rmp-serde = "1"
anyhow = "1"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
http-body-util = "0.1"
tempfile.workspace = true
