[package]
name = "issundb-retrieval"
description = "Hybrid retrieval APIs for IssunDB"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
issundb-core.workspace = true
issundb-vector.workspace = true
issundb-text.workspace = true
thiserror.workspace = true
ahash.workspace = true

[features]
default = []

[dev-dependencies]
tempfile.workspace = true
serde_json = "1"
criterion.workspace = true

[[bench]]
name = "hybrid_retrieval"
harness = false

[[bench]]
name = "graphrag_retrieval"
harness = false
