[package]
name = "issundb-testing"
description = "Shared test helpers and fixtures for IssunDB crates"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
# This crate is test-only infrastructure; do not publish it.
publish = false

[dependencies]
issundb-core = { path = "../issundb-core" }
tempfile.workspace = true
serde_json.workspace = true
rand.workspace = true

[[bin]]
name = "gen_testdata"
path = "src/bin/gen_testdata.rs"
