[package]
name = "issundb-text"
description = "Full-text indexing and search for IssunDB"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
autobenches = false

[dependencies]
issundb-core.workspace = true
thiserror.workspace = true
roaring.workspace = true

[dev-dependencies]
tempfile.workspace = true
serde_json.workspace = true
criterion.workspace = true
proptest.workspace = true
parquet.workspace = true
arrow-array.workspace = true

[[bench]]
name = "fts_search"
harness = false

[[bench]]
name = "se_fts_search"
harness = false
