[package]
name = "issundb-vector"
description = "Vector indexing and search for IssunDB"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
issundb-core.workspace = true
tracing.workspace = true
parking_lot.workspace = true
usearch.workspace = true
thiserror.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
criterion.workspace = true

[[bench]]
name = "vector_search"
harness = false
