[package]
name = "issundb-vector"
description = "Vector indexing and search for IssunDB"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
autobenches = false

[dependencies]
issundb-core.workspace = true
tracing.workspace = true
parking_lot.workspace = true
usearch.workspace = true
thiserror.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
criterion.workspace = true
parquet.workspace = true
arrow-array.workspace = true

[[bench]]
name = "vector_search"
harness = false

[[bench]]
name = "se_vector_search"
harness = false
