[package]
name = "issundb"
description = "IssunDB's main crate; it exposes the public API for IssunDB"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
issundb-core = { path = "../issundb-core" }
issundb-cypher = { path = "../issundb-cypher" }
issundb-vector = { path = "../issundb-vector" }
issundb-text = { path = "../issundb-text" }
issundb-retrieval = { path = "../issundb-retrieval" }
serde_json = "1"

[features]
default = []
graphblas = ["issundb-core/graphblas", "issundb-retrieval/graphblas"]

[dev-dependencies]
tempfile.workspace = true
rmp-serde.workspace = true
