[package]
name = "issundb"
description = "IssunDB's main crate; it exposes the public API for IssunDB"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
issundb-core.workspace = true
issundb-cypher.workspace = true
issundb-vector.workspace = true
issundb-text.workspace = true
issundb-retrieval.workspace = true
serde_json = "1"

[features]
default = []

[dev-dependencies]
tempfile.workspace = true
rmp-serde.workspace = true
serde.workspace = true
walkdir.workspace = true
gherkin.workspace = true
serde_json.workspace = true
criterion.workspace = true

[[bench]]
name = "query_optimizer"
harness = false

[[bench]]
name = "profile_query"
harness = false

[[bench]]
name = "profile_triangle"
harness = false
